src/objects/Account_Fund__c.object
<CustomObject>
    <description>Junction object between Account and Fund objects. 
This object will be used to maintain the Account to Fund relationships.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Funds</relationshipLabel>
        <relationshipName>Related_Funds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Fund</label>
    <nameField>
        <displayFormat>AFN-{0000}</displayFormat>
        <label>Account Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Fund</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>